--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
+		"argon2": "^0.29.1",
 		"body-parser": "^1.20.0",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.5",
