--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.14",
+		"@types/jsonwebtoken": "^8.5.9",
 		"@types/node": "^18.7.23",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"@typescript-eslint/parser": "^5.38.1",
