--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@fsouza/prettierd": "^0.22.2",
 		"@typegoose/typegoose": "^9.12.1",
+		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.14",
 		"@types/jsonwebtoken": "^8.5.9",
@@ -27,6 +28,7 @@
 	"dependencies": {
 		"argon2": "^0.29.1",
 		"body-parser": "^1.20.0",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.5",
 		"dotenv": "^16.0.3",
