--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.6.2",
 		"multer": "^1.4.5-lts.1",
+		"nanoid": "^4.0.0",
 		"path": "^0.12.7",
 		"pino": "^8.6.1",
 		"pino-pretty": "^9.1.0",
