--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"argon2": "^0.29.1",
+		"argon2": "^0.43.0",
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -36,7 +36,7 @@
 		"http-status-codes": "^2.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.6.2",
-		"multer": "^1.4.5-lts.1",
+		"multer": "^2.0.1",
 		"nanoid": "^4.0.0",
 		"path": "^0.12.7",
 		"pino": "^8.6.1",
