--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.28.0",
 		"@fsouza/prettierd": "^0.22.2",
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/cookie-parser": "^1.4.3",
@@ -20,10 +21,12 @@
 		"@types/node": "^18.7.23",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"@typescript-eslint/parser": "^5.38.1",
+		"eslint": "^9.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint_d": "^12.2.1",
 		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.8.4"
+		"typescript": "^4.8.4",
+		"typescript-eslint": "^8.33.1"
 	},
 	"dependencies": {
 		"argon2": "^0.43.0",
@@ -33,6 +36,7 @@
 		"dayjs": "^1.11.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
+		"globals": "^16.2.0",
 		"http-status-codes": "^2.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.6.2",
