--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
 		"dev": "tsnd --exit-child --transpile-only src/app.ts",
 		"build": "tsc",
 		"start": "node ./dist/app.js",
-		"lint": "eslint_d --ext .js,.ts,.jsx,.tsx src/",
+		"lint": "eslint --ext .js,.ts,.jsx,.tsx src/",
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.28.0",
-		"@fsouza/prettierd": "^0.22.2",
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.12",
@@ -23,7 +22,6 @@
 		"@typescript-eslint/parser": "^5.38.1",
 		"eslint": "^9.28.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint_d": "^12.2.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.8.4",
 		"typescript-eslint": "^8.33.1"
